# index-vs-scan

./: .gitignore  CMakeLists.txt  README.md  run_benchmarks.sh
src/: BenchmarkConfig.hpp  BenchmarkRunner.cpp  BenchmarkRunner.hpp  CMakeLists.txt  Main.cpp  PAPI_flops.c  Scan.cpp  Scan.hpp  Table.cpp  Table.hpp
test/: TableTest.cpp
visualization/: result_visualization.ipynb
